# zelda3

./: .gitignore  ANALYSIS_SUMMARY.md  ANDROID_ASSET_SOLUTION_SUMMARY.md  ANDROID_INTEGRATION_GUIDE.md  ANDROID_QUICKSTART.md  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_FINDINGS.md  CODE_REVIEW_FIXES_PLAN.md  CODE_REVIEW_IMPROVEMENTS.md  CONTRIBUTING.md  DEBUG_CONSOLE.md  README.md  REFACTORING_TODO.md  RESTOOL_ANDROID_MIGRATION_ANALYSIS.md  RESTOOL_CPP_MIGRATION_PLAN.md  SOLUTION_COMPLETE.md  build_assets.sh  build_assets_windows.bat  zelda3.ini
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle  proguard-rules.pro
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: zelda3.ini
android/app/src/main/assets/shaders/: frag.spv  vertex.glsl
android/app/src/main/java/com/dishii/zelda3/: AssetCopyUtil.kt  LauncherActivity.kt  MainActivity.kt
android/app/src/main/java/com/dishii/zelda3/overlay/: InputOverlay.kt  InputOverlayDrawableButton.kt  InputOverlayDrawableDpad.kt  OverlayScaleDialog.kt
android/app/src/main/java/com/dishii/zelda3/overlay/model/: OverlayControl.kt  OverlayControlData.kt  OverlayLayout.kt
android/app/src/main/res/color/: nav_item_background.xml
android/app/src/main/res/drawable/: ic_delete.xml  ic_gamepad.xml  ic_graphics.xml  ic_launcher_background.xml  ic_music.xml  ic_pause.xml  ic_placeholder_snes.xml  ic_restart.xml  ic_swords.xml
android/app/src/main/res/layout/: dialog_audio_options.xml  dialog_bind_button.xml  dialog_controller_settings.xml  dialog_delete_msu.xml  dialog_display_settings.xml  dialog_graphics_options.xml  dialog_overlay_adjust.xml  dialog_overlay_options.xml  dialog_overlay_scale.xml  dialog_save_load_state.xml  dialog_toggle_controls.xml  item_controller_binding.xml  item_save_slot.xml  layout.xml
android/app/src/main/res/menu/: drawer_menu.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
assets/: compile_resources.py  diagnose_assets.py  extract_resources.py  fix_asset_generation.md  test_cross_platform.py
cmake/: FindOpus.cmake
docs/: README.md  architecture.md  code-quality-analysis.md  contributing.md  critical-fixes-guide.md  debugging.md  development.md  getting-started.md  index.md  installation.md  launcher.md  performance-analysis.md  troubleshooting.md  usage.md  vulkan-feasibility-analysis.md
docs/technical/: audio-system.md  feature-flags.md  graphics-pipeline.md  memory-layout.md  renderers.md
shaders/: compile_shaders.sh  fragment.glsl  vert.spv
snes/: cpu.c  ppu.c  ppu.h  snes_other.c  spc.c
src/: ancilla.c  audio.c  config.c  config.h  config_defaults_generated.h  config_reader.c  config_reader.h  config_writer.c  config_writer.h  debug_state.c  debug_state.h  dungeon.c  dynamic_array.h  ending.c  features.h  glsl_shader.c  hud.c  launcher_gamepad.c  launcher_gamepad.h  launcher_main.c  launcher_ui.c  launcher_ui.h  load_gfx.c  logging.c  logging.h  main.c  math_util.h  messaging.c  misc.h  opengl.c  overworld.c  platform.c  platform.h  platform_detect.h  player.c  player.h  spc_player.h  sprite.c  sprite.h  sprite_main.c  (+10 more)
src/platform/android/: android_jni.c  android_jni.h
src/platform/macos/: launcher_macos.m
